force-app/main/default/objects/edynamics__ArchiveForChatter__c/edynamics__ArchiveForChatter__c.object-meta.xml
<CustomObject>
    <description>Repository for Chatter posts and comments</description>
    <label>Archive For Chatter Lockbox</label>
    <nameField>
        <label>ArchiveForChatter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archive For Chatter Lockbox</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>