force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__Body__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Body__c</fullName>
    <label>Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>