force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__CommentCount__c.field-meta.xml
<CustomField>
    <fullName>edynamics__CommentCount__c</fullName>
    <label>CommentCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>