force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__CommentLinkedToFeedId__c.field-meta.xml
<CustomField>
    <fullName>edynamics__CommentLinkedToFeedId__c</fullName>
    <label>CommentLinkedToFeedId</label>
    <type>Url</type>
</CustomField>