force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__ContentDescription__c.field-meta.xml
<CustomField>
    <fullName>edynamics__ContentDescription__c</fullName>
    <label>ContentDescription</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>