force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__Feedid__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Feedid__c</fullName>
    <label>Feedid</label>
    <type>Url</type>
</CustomField>