force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__IBD__c.field-meta.xml
<CustomField>
    <fullName>edynamics__IBD__c</fullName>
    <label>IBD</label>
    <type>DateTime</type>
</CustomField>