force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__InsertedById__c.field-meta.xml
<CustomField>
    <fullName>edynamics__InsertedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InsertedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ArchiveForChatter</relationshipName>
    <type>Lookup</type>
</CustomField>