force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__LinkUrl__c.field-meta.xml
<CustomField>
    <fullName>edynamics__LinkUrl__c</fullName>
    <label>LinkUrl</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>