force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__ParentID__c.field-meta.xml
<CustomField>
    <fullName>edynamics__ParentID__c</fullName>
    <label>ParentID</label>
    <type>Url</type>
</CustomField>