force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__ParentName__c.field-meta.xml
<CustomField>
    <fullName>edynamics__ParentName__c</fullName>
    <label>ParentName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>