force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__ParentType__c.field-meta.xml
<CustomField>
    <fullName>edynamics__ParentType__c</fullName>
    <label>ParentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>