force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__Title__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Title__c</fullName>
    <label>Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>