force-app/main/default/objects/edynamics__ArchiveForChatter__c/fields/edynamics__Type__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>