force-app/main/default/objects/edynamics__ArchiveForChatter__c/listViews/edynamics__All.listView-meta.xml
<ListView>
    <fullName>edynamics__All</fullName>
    <columns>NAME</columns>
    <columns>edynamics__Type__c</columns>
    <columns>edynamics__Body__c</columns>
    <columns>edynamics__ContentFileName__c</columns>
    <columns>edynamics__ContentSize__c</columns>
    <columns>edynamics__LinkUrl__c</columns>
    <columns>edynamics__InsertedByDate__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>